syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service ApplicantProfile{
	rpc GetApplicantProfile(ApplicantProfileIdRequest) returns (ApplicantProfileReply);
	rpc GetAllApplicantProfile(google.protobuf.Empty) returns (ApplicantProfileList);
	rpc AddApplicantProfile(ApplicantProfileList) returns (google.protobuf.Empty);
	rpc UpdateApplicantProfile(ApplicantProfileList) returns (google.protobuf.Empty);
	rpc DeleteApplicantProfile(ApplicantProfileList) returns (google.protobuf.Empty);
}

message ApplicantProfileIdRequest{
	string Id = 1;
}

message ApplicantProfileReply{
	string Id = 1;
	string Login = 2;
	//decimal CurrentSalary = 3; // need to implement deicmal type
	//decimal CurrenRate = 4;
	string Currency = 5;
	string Country = 6;
	string Province = 7;
	string Street = 8;
	string City = 9;
	string PostalCode = 10;
	bytes Timestamp = 11;
}

message ApplicantProfileList{
	repeated ApplicantProfileReply AppProfiles = 1;
}